Update 'avo07bbdf-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-4bcbee084a.p0a3.p3.openshiftapps.com/rhtap/rhtap-qe:4dfa4b3423245a90f19b826a31fec12b7146a833@sha256:8b5649241d8f2b8ec5fab5629031e28231fa9ddce2b5d6ff706166a4a411fd38

--- a/components/avo07bbdf-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/avo07bbdf-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: avo07bbdf-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-4bcbee084a.p0a3.p3.openshiftapps.com/rhtap/rhtap-qe:4dfa4b3423245a90f19b826a31fec12b7146a833@sha256:8b5649241d8f2b8ec5fab5629031e28231fa9ddce2b5d6ff706166a4a411fd38
+          name: container-image
